--- a/Dashboard.html
+++ b/Dashboard.html
@@ -27,28 +27,28 @@
     <section class="main">
         <div class="link-box">
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/refrigerator.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=13&utm_term=consumerelectronics"
-                    class="link" data-link-index="0"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2023/10/351678416/BY/YT/AM/6981331/ss-undercounter-refrigerator-1000x1000.jpg"
-                        alt="link1"></a>
+                <a href="https://dir.indiamart.com/impcat/hp-laptop.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=1&utm_term=computer&itsolutions"
+                    class="link" data-link-index="9"><img
+                        src="https://5.imimg.com/data5/AU/HQ/LH/SELLER-14158318/hp-chromebook-x360-14-da0003tu-500x500.png"
+                        alt="link9"></a>
             </div>
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/air-coolers.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=19&utm_term=consumerelectronics"
-                    class="link" data-link-index="1"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2023/5/308270389/RJ/TN/PK/2665109/ice-cool-1000x1000.jpeg"
-                        alt="link"></a>
+                <a href="https://dir.indiamart.com/impcat/lenovo-desktop.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=4&utm_term=computer&itsolutions"
+                    class="link" data-link-index="10"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/7/324320416/RR/GR/IP/3270234/lenovo-thinkcentre-m720q-tiny-desktop-500x500.jpeg"
+                        alt="link10"></a>
             </div>
             <div class="link-img">
                 <a href="https://dir.indiamart.com/impcat/samsung-split-air-conditioners.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=23&utm_term=consumerelectronics"
-                    class="link" data-link-index="2"><img
+                    class="link" data-link-index="11"><img
                         src="https://5.imimg.com/data5/SELLER/Default/2024/2/394460666/OZ/XE/XF/44326447/samsung-1-0-ton-3-star-inverter-split-ac-1000x1000.jpg"
-                        alt="link"></a>
+                        alt="link11"></a>
             </div>
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/modular-kitchens.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=25&utm_term=architecture&interiors"
-                    class="link" data-link-index="3"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2024/3/400273942/BS/XX/VF/9973247/laminated-modular-kitchen-1000x1000.png"
-                        alt="link"></a>
+                <a href="https://dir.indiamart.com/impcat/study-table.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=10&utm_term=furniture&supplies"
+                    class="link" data-link-index="12"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/6/316529969/KZ/WI/AU/2976964/study-table-sp-dsk-7--1000x1000.jpg"
+                        alt="link12"></a>
             </div>
         </div>
 
