--- a/register.html
+++ b/register.html
@@ -15,6 +15,10 @@
             <input type="email" id="email" placeholder="Email" required>
             <input type="password" id="password" placeholder="Password" required>
             <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+
+            <!-- New input field for referral code -->
+            <input type="text" id="referralCode" placeholder="Referral Code (Optional)">
+
             <button type="submit">Register</button>
         </form>
         <p id="message"></p>
