--- a/Dashboard.html
+++ b/Dashboard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Dashboard</title>
     <link rel="stylesheet" href="Dashboard.css">
 </head>
+
 <body>
     <nav id="nav-bar">
         <div class="welcome-msg">
@@ -21,38 +23,7 @@
     </nav>
 
     <section class="main">
-        <div class="link-box">
-            <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/hp-laptop.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=1&utm_term=computer&itsolutions"
-                    class="link" data-link-index="9"><img
-                        src="https://5.imimg.com/data5/AU/HQ/LH/SELLER-14158318/hp-chromebook-x360-14-da0003tu-500x500.png"
-                        alt="link9"></a>
-            </div>
-        </div>
-        <div class="link-box">
-            <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/lenovo-desktop.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=4&utm_term=computer&itsolutions"
-                    class="link" data-link-index="10"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2023/7/324320416/RR/GR/IP/3270234/lenovo-thinkcentre-m720q-tiny-desktop-500x500.jpeg"
-                        alt="link10"></a>
-            </div>
-        </div>
-        <div class="link-box">
-            <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/logitech-computer-mouse.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=7&utm_term=consumerelectronics"
-                    class="link" data-link-index="11"><img
-                        src="https://5.imimg.com/data5/CW/DT/MO/SELLER-30977286/wireless-key-board-and-mouse-500x500.jpg"
-                        alt="link11"></a>
-            </div>
-        </div>
-        <div class="link-box">
-            <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/study-table.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=10&utm_term=furniture&supplies"
-                    class="link" data-link-index="12"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2023/6/316529969/KZ/WI/AU/2976964/study-table-sp-dsk-7--1000x1000.jpg"
-                        alt="link12"></a>
-            </div>
-        </div>
+        <div class="link-container" id="linkContainer"></div>
     </section>
 
     <script>
@@ -162,4 +133,5 @@
         }
     </script>
 </body>
+
 </html>
