--- a/profile.html
+++ b/profile.html
@@ -111,6 +111,7 @@
                     });
 
                     document.getElementById('Promotion').addEventListener('click', () => {
+                        alert("clicked");
                         window.location.href = `Referral.html?userId=${userId}`;
                     });
 
