--- a/profile.html
+++ b/profile.html
@@ -110,10 +110,11 @@
                         window.location.href = `withdraw.html?userId=${userId}`;
                     });
 
-                    document.getElementById('Promotion').addEventListener('click', (event) => {
-                        event.preventDefault();
+                    document.getElementById('Promotion').addEventListener('click',()=>{
                         window.location.href = `referral.html?userId=${userId}`;
                     });
+                        
+                    
 
                 } else {
                     console.error('Error:', data.message);
