--- a/Dashboard.html
+++ b/Dashboard.html
@@ -129,7 +129,7 @@
         async function updateCoinAndLinkState(index) {
             try {
                 const userId = new URLSearchParams(window.location.search).get('userId');
-                const updateResponse = await fetch(`${apiUrl}/update-link/${userId}`, {
+                const updateResponse = await fetch(`${apiUrl}/update-link`, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
