--- a/Referral.html
+++ b/Referral.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="referral-balance">
-            <h3>Referral Coins : <span id="referralCoins"></span></h3>
+            <h3>Referral Coins Earned: <span id="referralCoins"></span></h3>
         </div>
     </section>
 
