--- a/Referral.html
+++ b/Referral.html
@@ -19,13 +19,14 @@
             </div>
         </div>
 
+        <div class="referral-balance">
+            <h3>Your Referral Balance</h3>
+            <p id="referralBalance">Loading...</p>
+        </div>
+
         <div class="referral-status">
             <h3>Your Referrals</h3>
             <ul id="referralList"></ul>
-        </div>
-
-        <div class="referral-balance">
-            <h3>Referral Coins Earned: <span id="referralCoins"></span></h3>
         </div>
     </section>
 
@@ -72,7 +73,8 @@
                         referralList.appendChild(listItem);
                     });
 
-                    document.getElementById('referralCoins').textContent = data.referralCoins;
+                    const referralBalance = document.getElementById('referralBalance');
+                    referralBalance.textContent = `${data.referralCoins} Coins`;
                 } else {
                     console.error('Error:', data.message);
                 }
