--- a/Dashboard.html
+++ b/Dashboard.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Dashboard</title>
     <link rel="stylesheet" href="Dashboard.css">
 </head>
+
 <body>
     <nav id="nav-bar">
         <div class="welcome-msg">
@@ -23,33 +25,33 @@
     <section class="main">
         <div class="link-box">
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/hp-laptop.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=1&utm_term=computer&itsolutions"
-                    class="link" data-link-index="9"><img
-                        src="https://5.imimg.com/data5/AU/HQ/LH/SELLER-14158318/hp-chromebook-x360-14-da0003tu-500x500.png"
+                <a href="https://dir.indiamart.com/impcat/water-bottle.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=13&utm_term=kitchenutensils&appliances"
+                    class="link" data-link-index="13"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/11/360436563/AC/EQ/KR/52636305/steel-water-bottle-with-wooden-lid-h158-1000x1000.jpg"
                         alt="link9"></a>
             </div>
         </div>
         <div class="link-box">
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/lenovo-desktop.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=4&utm_term=computer&itsolutions"
-                    class="link" data-link-index="10"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2023/7/324320416/RR/GR/IP/3270234/lenovo-thinkcentre-m720q-tiny-desktop-500x500.jpeg"
+                <a href="https://dir.indiamart.com/impcat/3d-wheel-alignment-machine.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=16&utm_term=automobile,parts&spares"
+                    class="link" data-link-index="14"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2020/12/JX/YV/YM/1249881/dt-300-3d-wheel-alignment-250x250.PNG"
                         alt="link10"></a>
             </div>
         </div>
         <div class="link-box">
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/logitech-computer-mouse.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=7&utm_term=consumerelectronics"
-                    class="link" data-link-index="11"><img
-                        src="https://5.imimg.com/data5/CW/DT/MO/SELLER-30977286/wireless-key-board-and-mouse-500x500.jpg"
+                <a href="https://dir.indiamart.com/impcat/sony-headphone.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=19&utm_term=consumerelectronics"
+                    class="link" data-link-index="15"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2023/1/IS/IP/EC/80249956/mdr-xb450-headphone-500x500.jpg"
                         alt="link11"></a>
             </div>
         </div>
         <div class="link-box">
             <div class="link-img">
-                <a href="https://dir.indiamart.com/impcat/study-table.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=10&utm_term=furniture&supplies"
+                <a href="https://dir.indiamart.com/impcat/recron-bed-pillows.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=25&utm_term=hometextile&furnishing"
                     class="link" data-link-index="12"><img
-                        src="https://5.imimg.com/data5/SELLER/Default/2023/6/316529969/KZ/WI/AU/2976964/study-table-sp-dsk-7--1000x1000.jpg"
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/2/384601317/WS/ZA/VZ/33546889/classic-recron-pillow-500x500.jpeg"
                         alt="link12"></a>
             </div>
         </div>
@@ -160,6 +162,8 @@
                 console.error('Error updating link status:', error);
             }
         }
+
     </script>
 </body>
+
 </html>
