--- a/Referral.html
+++ b/Referral.html
@@ -37,7 +37,7 @@
                 return;
             }
 
-            const referralLink = `https://click-and-win.netlify.app/register?referralId=${userId}`;
+            const referralLink = `https://click-and-win.netlify.app/register.html?referralId=${userId}`;
             const inputField = document.getElementById('referralInput');
             inputField.value = referralLink;
 
