--- a/Dashboard.html
+++ b/Dashboard.html
@@ -23,6 +23,43 @@
     </nav>
 
     <section class="main">
+
+
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/allen-solly-shirt.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=31&utm_term=apparel&garments"
+                    class="link" data-link-index="17"><img
+                        src="https://5.imimg.com/data5/ANDROID/Default/2023/8/331591428/BE/OY/FE/146284842/product-jpeg-500x500.jpg"
+                        alt="link13"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/mitsubishi-air-conditioner.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=34&utm_term=consumerelectronics"
+                    class="link" data-link-index="18"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2022/11/IF/PS/MP/8012057/mitsubishi-electric-air-conditioning-250x250.jpg"
+                        alt="link14"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/vip-luggage-bags.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_jun_24&utm_content=37&utm_term=bags,belts&wallets"
+                    class="link" data-link-index="19"><img
+                        src="https://5.imimg.com/data5/IOS/Default/2022/8/SI/TK/QZ/3741324/product-jpeg-500x500.png"
+                        alt="link15"></a>
+            </div>
+        </div>
+        <div class="link-box">
+            <div class="link-img">
+                <a href="https://dir.indiamart.com/impcat/solar-fans.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=28&utm_term=electricalequipment"
+                    class="link" data-link-index="20"><img
+                        src="https://5.imimg.com/data5/SELLER/Default/2024/3/401709650/KT/QZ/TI/6093690/gigawatts-hyd-sf916a-20w-solar-powered-pedestal-fan-16-portable-and-quiet-with-high-power-air-250x250.jpg"
+                        alt="link16"></a>
+            </div>
+        </div>
+
+
+
         <div class="link-box">
             <div class="link-img">
                 <a href="https://dir.indiamart.com/impcat/water-bottle.html?utm_source=abmshorts&utm_medium=affiliate&utm_campaign=affiliate_pbp_may_24&utm_content=13&utm_term=kitchenutensils&appliances"
