--- a/Referral.html
+++ b/Referral.html
@@ -29,7 +29,7 @@
         </div>
     </section>
 
-    <script>
+    <!-- <script>
         document.addEventListener('DOMContentLoaded', async () => {
             const userId = new URLSearchParams(window.location.search).get('userId');
             if (!userId) {
@@ -81,7 +81,7 @@
                 console.error('Error:', error);
             }
         });
-    </script>
+    </script> -->
 </body>
 
 </html>
