--- a/profile.html
+++ b/profile.html
@@ -112,7 +112,7 @@
                     });
 
                     document.getElementById('Promotion').addEventListener('click',()=>{
-                        window.location.href = `referral.html?userId=${userId}`;
+                        alert("Under Construction...");
                     });
                         
                     
