--- a/profile.html
+++ b/profile.html
@@ -112,7 +112,8 @@
                     });
 
                     document.getElementById('Promotion').addEventListener('click',()=>{
-                        window.location.href = `referral.html?userId=${userId}`;
+                        alert("This Site is Under Construction...");
+                        // window.location.href = `referral.html?userId=${userId}`;
                     });
                         
                     
