--- a/profile.html
+++ b/profile.html
@@ -112,8 +112,7 @@
                     });
 
                     document.getElementById('Promotion').addEventListener('click',()=>{
-                        alert("This Site is Under Construction...");
-                        // window.location.href = `referral.html?userId=${userId}`;
+                        window.location.href = `referral.html?userId=${userId}`;
                     });
                         
                     
